test/files/neg/t5358.scala
trait A { def hi = "A" }
trait B { def hi = "B" }
class C extends A with B

